fix: adjust searchbar alignment

--- a/src/styles/bar.css
+++ b/src/styles/bar.css
@@ -33,6 +33,7 @@
   display: flex;
   margin: 0;
   align-items: center;
+  min-width: 8em;
   font-size: 1.5em;
   font-weight: normal;
   color: var(--charcoal-grey);
